[Admin] Fix show layout and styles (header/actions overflow).

--- a/Resources/private/css/layout.css
+++ b/Resources/private/css/layout.css
@@ -510,7 +510,7 @@ input.search {
     position: relative;
     background: #fff;
     margin-left: 177px;
-    padding-top: 48px;
+    padding: 48px 0 40px 0;
     border-left: 1px solid #dae3e9;
     box-shadow: -3px 3px 4px -1px #f1f1f3;
     -webkit-transition: margin-left .3s ease;
@@ -630,7 +630,7 @@ input.search {
 }
 
 .main-header {
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 .main-header .infos {
