--- a/Resources/private/css/show.css
+++ b/Resources/private/css/show.css
@@ -1,3 +1,8 @@
+.show {
+    clear: both;
+    padding-top: 10px;
+}
+
 .show-body {
     border: 1px solid #ddd;
     border-radius: 4px;
